# web-automate-hotel-reservation-ai-agent-mcp-client

./: LICENSE  Makefile  README.md  mcp-client.py  pyproject.toml  requirements.txt
src/: agent.py  mcp_server_config.json
